# literatur-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  core.py  fly.toml  main.py  mcp_server.py  modal_app.py  pyproject.toml  requirements.txt  test_inmemory.py
gizlilik/: index.html
